--- a/search.html
+++ b/search.html
@@ -48,6 +48,13 @@
       50% { transform: scale(1.05); box-shadow: 0 0 20px #fff, 0 0 10px #f0f; }
       100% { transform: scale(1); box-shadow: 0 0 12px #fff, 0 0 6px #f0f; }
     }
+
+    input::placeholder {
+  font-size: 0.4rem;
+ 
+  color: #999;
+}
+
   </style>
 </head>
 <body class="bg-gradient-to-br from-pink-100 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-4 pt-6">
