--- a/search.html
+++ b/search.html
@@ -50,7 +50,7 @@
     }
 
     input::placeholder {
-  font-size: 0.4rem;
+  font-size: 0.6rem;
  
   color: #999;
 }
@@ -64,7 +64,7 @@
       <span class="text-lg text-gray-600 font-normal"> (Not for Probies)</span>
     </h1>
     <div class="mb-6 flex flex-col sm:flex-row gap-2 w-full items-center justify-center">
-      <input id="searchInput" type="text" placeholder="type your name, click search, allow 4s for the duties to load"
+      <input id="searchInput" type="text" placeholder=" ..allow 4s for the duties to load"
         class="border border-gray-300 rounded px-2 py-2 text-base focus:outline-none shadow-sm w-48" />
       <button id="searchBtn" class="bg-gradient-to-r from-purple-500 to-blue-700 text-white px-6 py-3 text-lg rounded shadow transition-transform duration-200 ease-in-out hover:scale-105 hover:shadow-xl animate-pulse">
         Search
